--- a/DM_CA2.html
+++ b/DM_CA2.html
@@ -18716,7 +18716,7 @@ dtype: int64</pre>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="???-moghayese-3-natige">??? moghayese 3 natige<a class="anchor-link" href="#???-moghayese-3-natige">&#182;</a></h1><p>As the amount of min-support increases, the number of frequent itemsets decreases because we impose more restrictions on the <em>support &gt;= min_support</em> condition.</p>
+<h1 id="?-moghayese-3-natige">? moghayese 3 natige<a class="anchor-link" href="#?-moghayese-3-natige">&#182;</a></h1><p>As the value of min-support increases, the number of frequent itemsets decreases because we impose more restrictions on the <em>support &gt;= min_support</em> condition.</p>
 
 </div>
 </div>
@@ -19719,7 +19719,7 @@ $${(spaghetti)}→{(ground beef)}$$
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[26]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[36]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Number of association rules with min-support = 0.03 and min-confidence = 0.35  : &quot;</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">association_rules_2</span><span class="p">))</span>
@@ -19754,7 +19754,8 @@ $${(spaghetti)}→{(ground beef)}$$
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="???-ellat-taghyir-tedad-ghavanin">??? ellat taghyir tedad ghavanin<a class="anchor-link" href="#???-ellat-taghyir-tedad-ghavanin">&#182;</a></h1>
+<h1 id="?-ellat-taghyir-tedad-ghavanin">? ellat taghyir tedad ghavanin<a class="anchor-link" href="#?-ellat-taghyir-tedad-ghavanin">&#182;</a></h1><p>The number of rules decreased because as the value of min-confidence increases, the number of frequent itemsets decreases because we impose more restrictions on the <em>confidence &gt;= min_confidence</em> condition.</p>
+
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
